@@ -1,3 +1,12 @@
+2002-04-12  Don Howard  <dhoward@redhat.com>
+
+	* cli/cli-cmds.c (init_cli_cmds): Add new user settable value:
+	max_user_call_depth.
+	(init_cmd_lists): Initialize the new value;
+	* cli/cli-script.c (execute_user_command): Limit the call depth of
+	user defined commands.  This avoids a core-dump when user commands
+	are infinitly recursive.
+
 2002-04-12  Kevin Buettner  <kevinb@redhat.com>
 
 	* ppc-tdep.h (struct gdbarch_tdep): Add new member ``lr_frame_offset''.
